# cataract-classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
backend/: main.py
cataract_classifier/: data.py  evaluate.py  predict.py  train.py  utils.py
frontend/: app.py
models/: training_metadata.json
notebooks/: 01-explore.ipynb
