[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cataract-classifier"
version = "0.0.1"
description = "Binary classification model to identify cataracts in images deployed via FASTAPI"
authors = [
  {name = "Himanshu Mittal"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "typer>=0.13.1",
]

[tool.ruff]
line-length = 80
